--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "mailgen": "^2.0.28",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
